k8s-manifests/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: apps
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
