k8s-manifests/webapp-vs-gac.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp
spec:
  hosts:
  - webapp-service
  http:
  - match:
    - headers:
        end-user:
          exact: "user1"
    route:
    - destination:
        host: webapp-service
        subset: v2
  - route:
    - destination:
        host: webapp-service
        subset: v1
